--- a/app/views/exercises/new.html.haml
+++ b/app/views/exercises/new.html.haml
@@ -3,7 +3,7 @@
 
 - content_for(:breadcrumbs) do
   = breadcrumbs do |breadcrumb|
-    - breadcrumb.item current_company.name.titlecase, company_path(current_company)
+    - breadcrumb.item current_company.name.titlecase, root_path
     - breadcrumb.item "Ejercicios", exercises_path
     - breadcrumb.item 'Nuevo', new_exercise_path, :active => true
 
