--- a/app/views/entries/_detail_fields.html.haml
+++ b/app/views/entries/_detail_fields.html.haml
@@ -3,7 +3,7 @@
     = f.semantic_errors
     = f.input :entry_id, :as => :hidden
     = f.input :description, :label => false, :wrapper_html => {:style => 'width:42%'}
-    = f.input :account, :collection => Account.leaves.map{|a|[a.self_and_ancestors.map(&:name).join(' &raquo; ').html_safe, a.id]}, :prompt => '-- seleccione una cuenta --', :label => false, :wrapper_html => {:style => 'width:41%'}
+    = f.input :account, :collection => current_company.accounts.leaves.map{|a|[a.code, a.name]}.join(' &raquo; ').html_safe, a.id]}, :prompt => '-- seleccione una cuenta --', :label => false, :wrapper_html => {:style => 'width:41%'}
     = f.input :debit, :label => false, :wrapper_html => {:style => 'width:5%;'}, :input_html => {:class => :debit}
     = f.input :credit, :label => false, :wrapper_html => {:style => 'width:5%;'}, :input_html => {:class => :credit}
     = link_to_remove_association icon('cross', :small, :title => 'eliminar detalle'), f
