--- a/app/views/entries/index.html.haml
+++ b/app/views/entries/index.html.haml
@@ -1,41 +1,43 @@
 - content_for(:title) do
-  Asientos
+  = "Ejercicio #{@exercise.label}"
 
 - content_for(:breadcrumbs) do
   = breadcrumbs do |breadcrumb|
     - breadcrumb.item current_company.name.titlecase, root_path
+    - breadcrumb.item 'Ejercicios', exercises_path
+    - breadcrumb.item select_tag('exercise_id', options_from_collection_for_select(current_company.exercises, :id, :short_label, params[:exercise_id]), :onchange => 'location.href="?exercise_id="+$(this).val();', :title => 'cambio de ejercicio'), entries_path, :active => true
     - breadcrumb.item 'Asientos', entries_path
-    - breadcrumb.item 'Listado', entries_path, :active => true
+
 
 - if can?(:create, Entry)
   - content_for(:controls) do
     = controls do |control|
-      - control.item t('scaffold.actions.new', :item => Entry.model_name.human).titlecase, new_entry_path, :icon => 'add'
+      - control.item t('scaffold.actions.new', :item => Entry.model_name.human).titlecase, new_entry_path, :icon => 'add'  
 
-- @exercises.each do |exercise|
-  .block
-    %h2= "Ejercicio #{exercise.label}"
-    - if exercise.entries.any?
-      %table
+.block
+  %h2 Asientos
+  - if @entries.any?
+    %table
+      %tr
+        %th= Entry.human_attribute_name('description')
+        %th= Entry.human_attribute_name('date_on')
+        %th Debe
+        %th Haber
+        %th Saldo
+        %th
+        %th
+        %th
+
+      - @entries.each do |entry|
         %tr
-          %th= Entry.human_attribute_name('description')
-          %th= Entry.human_attribute_name('date_on')
-          %th Debe
-          %th Haber
-          %th Saldo
-          %th
-          %th
-          %th
-
-        - exercise.entries.each do |entry|
-          %tr
-            %td= entry.description
-            %td= entry.date_on.to_s(:default)
-            %td= number_to_currency(entry.details.debit)
-            %td= number_to_currency(entry.details.credit)
-            %td= number_to_currency(entry.details.balance)
-            %td= link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), entry
-            %td= link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_entry_path(entry)
-    %br
-    .clear
+          %td= entry.description
+          %td= entry.date_on.to_s(:default)
+          %td= number_to_currency(entry.details.debit)
+          %td= number_to_currency(entry.details.credit)
+          %td= number_to_currency(entry.details.balance)
+          %td= link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), entry
+          %td= link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_entry_path(entry)
+  %br
+  .pagination= paginate @entries
+  .clear
 
