change default collapsed index account

--- a/app/views/accounts/index.html.haml
+++ b/app/views/accounts/index.html.haml
@@ -34,7 +34,7 @@
       });
     };
     $(document).ready(function(){
-      $('#account-list').treeview({url: location.href, collapsed: false, onLoad: makeOverloads});
+      $('#account-list').treeview({url: location.href, collapsed: true, onLoad: makeOverloads});
     });
   :css
     #overlay {
