--- a/app/views/odiseo/general_balance_reports/new.html.haml
+++ b/app/views/odiseo/general_balance_reports/new.html.haml
@@ -4,6 +4,7 @@
 - content_for(:controls) do
   = controls do |c|
     - c.item "Balance de Sumas y Saldos", new_balance_report_path, :icon => "report_go"
+    - c.item "Movimientos entre Fechas", new_report_date_path, :icon => "report_go"
 
 = render 'form'
 
