change accounta by exercises approach

--- a/app/views/accounts/_form.html.haml
+++ b/app/views/accounts/_form.html.haml
@@ -1,4 +1,4 @@
-= semantic_form_for([@parent, @account].compact) do |f|
+= semantic_form_for([@current_exercise, @parent, @account].compact) do |f|
   = f.semantic_errors
 
   = f.inputs do
