--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -5,13 +5,13 @@
   = breadcrumbs do |breadcrumb|
     - breadcrumb.item current_company.name.titlecase, company_path(current_company)
     - breadcrumb.item 'Cuentas', accounts_path
-    - breadcrumb.item @account.name, account_path(@account)
-    - breadcrumb.item 'Editar', edit_account_path(@account), :active => true
+    - breadcrumb.item @account.name, exercise_account_path(@current_exercise, @account)
+    - breadcrumb.item 'Editar', edit_exercise_account_path(@current_exercise, @account), :active => true
 
 - content_for(:controls) do
   = controls do |control|
-    - control.item t('scaffold.actions.show').titlecase, @account, :icon => 'application_get'
-    - control.item t('scaffold.actions.back').titlecase, accounts_path, :icon => 'application_view_list'
+    - control.item t('scaffold.actions.show').titlecase, [@current_exercise, @account], :icon => 'application_get'
+    - control.item t('scaffold.actions.back').titlecase, exercise_accounts_path(@current_exercise), :icon => 'application_view_list'
 
 = render 'form'
 
