--- a/app/views/exercises/index.html.haml
+++ b/app/views/exercises/index.html.haml
@@ -13,16 +13,15 @@
       - control.item t('scaffold.actions.new', :item => Exercise.model_name.human).titlecase, new_exercise_path, :icon => 'add'
 
 - if @exercises.any?
-  %table
+  %table.table
     %tr
       %th= Exercise.human_attribute_name('started_on')
       %th= Exercise.human_attribute_name('finished_on')
       %th= Exercise.human_attribute_name('description')
       %th= Exercise.human_attribute_name('uneven')
       %th= Exercise.human_attribute_name('close')
-      %th
-      %th
-      %th
+      %th.last
+      %th.last
 
     - @exercises.each do |exercise|
       %tr
@@ -31,7 +30,10 @@
         %td= exercise.description
         %td= exercise.uneven? ? icon('tick') : icon('cross')
         %td= exercise.close? ? icon('tick') : icon('cross')
-        %td= link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), exercise
-        %td= link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_exercise_path(exercise)
-        %td= link_to icon('application_delete', :small, :title => t('scaffold.actions.destroy').titlecase), exercise, :confirm => t('scaffold.actions.destroy_confirm'), :method => :delete
+        %td.last
+          = link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), exercise
+          = link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_exercise_path(exercise)
+          = link_to icon('application_delete', :small, :title => t('scaffold.actions.destroy').titlecase), exercise, :confirm => t('scaffold.actions.destroy_confirm'), :method => :delete
+        %td.last
+          = link_to icon('group', :small, :title => 'Cuentas Contables'), [exercise, :accounts]
 
