entries dependent exercise - exercise

--- a/app/views/entries/_form.html.haml
+++ b/app/views/entries/_form.html.haml
@@ -68,7 +68,7 @@
       return(r);
     };
 
-= semantic_form_for @entry do |form|
+= semantic_form_for [@entry.exercise,@entry] do |form|
   = form.semantic_errors
 
   -#
