--- a/app/views/entries/index.html.haml
+++ b/app/views/entries/index.html.haml
@@ -37,7 +37,7 @@
           %td.last= number_to_currency(entry.details.balance)
           %td.last
             = link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), entry
-            = link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_entry_path(entry)
+            = link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_exercise_entry_path(@exercise,entry)
     .clear
     .block{:style => 'margin:20px;'}= paginate(@entries)
     %br
