--- a/app/views/entries/index.html.haml
+++ b/app/views/entries/index.html.haml
@@ -35,7 +35,7 @@
           %td.last= number_to_currency(entry.details.debit)
           %td.last= number_to_currency(entry.details.credit)
           %td.last= number_to_currency(entry.details.balance)
-          %td.last
+          %td.last.actions
             = link_to icon('application_get', :small, :title => t('scaffold.actions.show').titlecase), entry
             = link_to icon('application_edit', :small, :title => t('scaffold.actions.edit').titlecase), edit_exercise_entry_path(@exercise,entry)
     .clear
