--- a/app/views/odiseo/general_balance_reports/_form.html.haml
+++ b/app/views/odiseo/general_balance_reports/_form.html.haml
@@ -4,7 +4,7 @@
   = f.inputs(:class => :column_left) do
     = f.input :exercise_id, :as => :select, :collection => current_company.exercises.map{|e|[e.label, e.id]}    
   = f.inputs(:class => :column_right) do
-    = f.input :until_date, :as => :datepicker
+    = f.input :until_date, :as => :date
   .clear
   = f.inputs do
     = link_to_function(icon('report_magnify') + 'Mostrar Reporte', "$(this).closest('form').submit();", :class => :button)
